Fixed: wflow-consoleweb - List Builder - Cards of Card template having border not visible correctly in builder. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/dbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/dbuilder.css
@@ -104,3 +104,7 @@ table.breakpoint th .overlay{
 table.defaulttemplate td[data-cbuilder-element-invisible]:after{
     display: none !important;
 }
+.cards.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
